# ENVI

./: pyproject.toml  requirements.txt
scenvi/: ENVI.py
