[tool.poetry]
name = "scenvi"
version = "0.2.6"
description = "Integration of scRNA-seq and spatial transcriptomics data"
authors = ["Doron Haviv"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.66.1"
scanpy = "^1.10.0"
flax = "^0.8.2"
optax = "^0.2.2"
tensorflow-probability = "^0.22.0"
clu = "^0.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
